master disable edit for noJS + fix spacing

--- a/src/AppBundle/Resources/assets/scss/digideps/_transfers.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_transfers.scss
@@ -3,7 +3,7 @@
     .transfer {
         border-top: 1px solid $border-colour;
         margin-top: 10px;
-        padding-top: 30px;
+        padding-top: 20px;
         transition: opacity .25s ease-in-out;
         -moz-transition: opacity .25s ease-in-out;
         -webkit-transition: opacity .25s ease-in-out;
